Fixed parallax issue on mobile.

--- a/assets/css/parallax.css
+++ b/assets/css/parallax.css
@@ -1,22 +1,25 @@
-.parallax-norepeat {
-    height: 100%;
-    margin: 0 auto;
-    width: 100%;
-    position: relative;
-    background-position: 50% 50%;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-}
 
-.parallax {
-    height: 100%;
-    margin: 0 auto;
-    width: 100%;
-    position: relative;
-    background-position: 50% 50%;
-    background-attachment: fixed;
+@media screen and (min-width: 736px) {
+	.parallax-norepeat {
+		height: 100%;
+		margin: 0 auto;
+		width: 100%;
+		position: relative;
+		background-position: 50% 50%;
+		background-attachment: fixed;
+		background-repeat: no-repeat;
+		-webkit-background-size: cover;
+		-moz-background-size: cover;
+		background-size: cover;
+		-o-background-size: cover;
+	}
+
+	.parallax {
+		height: 100%;
+		margin: 0 auto;
+		width: 100%;
+		position: relative;
+		background-position: 50% 50%;
+		background-attachment: fixed;
+	}
 }
